5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1791_1597.log
== TEST (2019-05-29 14:44:08) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = 80 - 5.o
print(custo)
-- ERROR:
File "XXXX", line 3
    custo = 80 - 5.o
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:15) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = 80 - 5.0
print(custo)
-- ERROR:
File "XXXX", line 3
    custo = 80 - 5.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:44:47) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
d = 5.0

-- EXECUTION TIME:
0.144847
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    d = 5.0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:46:17) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
c = 80 
d = 5.0
C = c - d
print(custo)
-- EXECUTION TIME:
0.169188
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    c = 80 
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:46:54) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
c = 80 
d = 5.0
C = 80 - 5.0
print(custo)
-- ERROR:
File "XXXX", line 3
    c = 80 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:02) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
c = 80.0 
d = 5.0
C = 80 - 5.0
print(custo)
-- ERROR:
File "XXXX", line 3
    c = 80.0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:13) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
o = 80.0 
d = 5.0
C = 80 - 5.0
print(custo)
-- ERROR:
File "XXXX", line 3
    o = 80.0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:35) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
 = 80.0 
d = 5.0
C = 80 - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 4
    d = 5.0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:50) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
v = 80.0 
d = 5.0
C = 80 - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    v = 80.0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:01) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
80.0 
5.0
C = 80 - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    80.0 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:10) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
C = 80 - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    C = 80 - 5.0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:48:23) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
C = 80 - 5.0
print(custo, 2)
-- EXECUTION TIME:
0.131931
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    C = 80 - 5.0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:50:03) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
Custo = c - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    Custo = c - 5.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:50:10) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")

print(custo, 2)
-- EXECUTION TIME:
0.152713
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 4
    print(custo, 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:40) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
compra = 80 - 5 
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    compra = 80 - 5 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:59) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
compra = 80 
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    compra = 80 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:51:59) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
compra = 80 
print(custo, 2)
-- EXECUTION TIME:
0.137137
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    compra = 80 
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:27) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
c = (80)
d = (5.0)
custo = 
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    c = (80)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:53:32) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
c = (80)
d = (5.0)
custo = 
print(custo, 2)
-- EXECUTION TIME:
0.113383
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    c = (80)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:54:32) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")

print(custo, 2)
-- EXECUTION TIME:
0.161419
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 4
    print(custo, 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:33) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")

print(custo, 2)
-- ERROR:
File "XXXX", line 4
    print(custo, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:41) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    print(custo, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:03:24) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")

print(custo, 2)
-- EXECUTION TIME:
0.14399
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 4
    print(custo, 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:59) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = vetor - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    custo = vetor - 5.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:04:03) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = vetor - 5.0
print(custo, 2)
-- EXECUTION TIME:
0.158717
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    custo = vetor - 5.0
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:07) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
d = float(5.0)
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    d = float(5.0)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:18) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
d = 5.0 
custo = vetor - 5.0 * 5
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    d = 5.0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:30) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
d = 5 
custo = vetor - 5.0 * 5
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    d = 5 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:54) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
desconto = 5.0 
custo = vetor - desconto * 5
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    desconto = 5.0 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:06:58) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
desconto = 5.0 
custo = vetor - desconto * 5
print(custo, 2)
-- EXECUTION TIME:
0.174969
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    desconto = 5.0 
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:29) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
desconto = 5.0 
custo = vetor - desconto * 5
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    desconto = 5.0 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:42) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
desconto = 5.0 
custo = vetor - desconto * 5
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    desconto = 5.0 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:08:50) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
desconto = 5.0 
custo = vetor - desconto * 5
print(custo, 2)
-- EXECUTION TIME:
0.146341
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    desconto = 5.0 
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:11:54) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
d = (5.0)
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    d = (5.0)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:19) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = vetor - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    custo = vetor - 5.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:31) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = vetor - 5.0
print(custo, 2)
-- EXECUTION TIME:
0.166184
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    custo = vetor - 5.0
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:33) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = vetor - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    custo = vetor - 5.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:33) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = vetor - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    custo = vetor - 5.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:34) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = vetor - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    custo = vetor - 5.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:35) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = vetor - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    custo = vetor - 5.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:44) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo = vetor - desconto
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    custo = vetor - desconto
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:13:03) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")

print(custo, 2)
-- EXECUTION TIME:
0.151892
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 4
    print(custo, 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:25) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
print(sum(vetor))
custo = sum(vetor) - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    print(sum(vetor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:33) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
sum(vetor))
custo = sum(vetor) - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    sum(vetor))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:14:37) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
sum(vetor))
custo = sum(vetor) - 5.0
print(custo, 2)
-- EXECUTION TIME:
0.253292
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    sum(vetor))
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:42) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
sum(vetor)
custo = sum(vetor) - 5.0
print(custo, 2)
-- ERROR:
File "XXXX", line 3
    sum(vetor)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:15) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")

-- ERROR:
File "XXXX", line 3
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:19) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
-- ERROR:
File "XXXX", line 3
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:20) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
-- ERROR:
File "XXXX", line 3
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:21) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
-- ERROR:
File "XXXX", line 3
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:25) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
						 
-- ERROR:
File "XXXX", line 4
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:15:47) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")

-- EXECUTION TIME:
0.141294
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:17:34) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
custo total = vetor * 5 - 5.0 
-- ERROR:
File "XXXX", line 3
    custo total = vetor * 5 - 5.0 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:05) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
desconto = 5.0
custo total = vetor - desconto 
-- ERROR:
File "XXXX", line 3
    desconto = 5.0
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:17) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
desconto = float(5.0)
custo total = vetor - desconto 
-- ERROR:
File "XXXX", line 3
    desconto = float(5.0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:25) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")
desconto = int(5.0)
custo total = vetor - desconto 
-- ERROR:
File "XXXX", line 3
    desconto = int(5.0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:59) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")))
custo total = vetor - desconto 
-- ERROR:
File "XXXX", line 3
    custo total = vetor - desconto 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:19:39) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")))
custo total = vetor - desconto 
-- EXECUTION TIME:
0.164159
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 3
    custo total = vetor - desconto 
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:26) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")))
desconto = 5.0 
custo total = vetor - desconto 
print(custo total, 2)

-- ERROR:
File "XXXX", line 4
    custo total = vetor - desconto 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:20:28) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetores: ")))
desconto = 5.0 
custo total = vetor - desconto 
print(custo total, 2)

-- EXECUTION TIME:
0.231082
-- ERROR:
  File "/home/codebench/codes/1791/1597/main.py", line 4
    custo total = vetor - desconto 
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
